# stream-web-provider

./: CHANGELOG.md  README.md  poetry.toml  pyproject.toml  stream_web_provider.service
.run/: main.run.xml
stream_web_provider/: application.py  camera_stream.py  interruptable_thread.py  main.py
stream_web_provider/templates/: index.html
